tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__list_plot__list_plot_labeled_single_dataset.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(r#\"ListPlot[Labeled[{1, 4, 9}, \"squares\"]]\"#)"
---
<svg width="360" height="225" viewBox="0 0 3600 2250" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="3600" height="2250" opacity="1" fill="#FFFFFF" stroke="none"/>
<circle cx="351" cy="1927" r="30" opacity="1" fill="#5E81B5" stroke="none" stroke-width="1"/>
<circle cx="1864" cy="1269" r="30" opacity="1" fill="#5E81B5" stroke="none" stroke-width="1"/>
<circle cx="3377" cy="171" r="30" opacity="1" fill="#5E81B5" stroke="none" stroke-width="1"/>
<line x1="230.2" y1="1997.8" x2="3500.0" y2="1997.8" stroke="#666" stroke-width="10"/>
<line x1="502.7" y1="1997.8" x2="502.7" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="654.1" y1="1997.8" x2="654.1" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="805.5" y1="1997.8" x2="805.5" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="956.9" y1="1997.8" x2="956.9" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="1259.6" y1="1997.8" x2="1259.6" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="1411.0" y1="1997.8" x2="1411.0" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="1562.4" y1="1997.8" x2="1562.4" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="1713.7" y1="1997.8" x2="1713.7" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="2016.5" y1="1997.8" x2="2016.5" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="2167.9" y1="1997.8" x2="2167.9" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="2319.3" y1="1997.8" x2="2319.3" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="2470.6" y1="1997.8" x2="2470.6" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="2773.4" y1="1997.8" x2="2773.4" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="2924.8" y1="1997.8" x2="2924.8" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="3076.1" y1="1997.8" x2="3076.1" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="3227.5" y1="1997.8" x2="3227.5" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="351.4" y1="1997.8" x2="351.4" y2="1957.8" stroke="#666" stroke-width="10"/>
<text x="351.4" y="2118.5" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1.0</text>
<line x1="1108.2" y1="1997.8" x2="1108.2" y2="1957.8" stroke="#666" stroke-width="10"/>
<text x="1108.2" y="2118.5" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1.5</text>
<line x1="1865.1" y1="1997.8" x2="1865.1" y2="1957.8" stroke="#666" stroke-width="10"/>
<text x="1865.1" y="2118.5" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">2.0</text>
<line x1="2622.0" y1="1997.8" x2="2622.0" y2="1957.8" stroke="#666" stroke-width="10"/>
<text x="2622.0" y="2118.5" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">2.5</text>
<line x1="3378.9" y1="1997.8" x2="3378.9" y2="1957.8" stroke="#666" stroke-width="10"/>
<text x="3378.9" y="2118.5" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">3.0</text>
<line x1="230.2" y1="100.0" x2="230.2" y2="1997.8" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="1971.4" x2="254.2" y2="1971.4" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="1883.5" x2="254.2" y2="1883.5" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="1795.7" x2="254.2" y2="1795.7" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="1620.0" x2="254.2" y2="1620.0" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="1532.1" x2="254.2" y2="1532.1" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="1444.2" x2="254.2" y2="1444.2" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="1356.4" x2="254.2" y2="1356.4" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="1180.7" x2="254.2" y2="1180.7" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="1092.8" x2="254.2" y2="1092.8" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="1004.9" x2="254.2" y2="1004.9" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="917.1" x2="254.2" y2="917.1" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="741.4" x2="254.2" y2="741.4" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="653.5" x2="254.2" y2="653.5" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="565.7" x2="254.2" y2="565.7" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="477.8" x2="254.2" y2="477.8" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="302.1" x2="254.2" y2="302.1" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="214.2" x2="254.2" y2="214.2" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="126.4" x2="254.2" y2="126.4" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="1707.8" x2="270.2" y2="1707.8" stroke="#666" stroke-width="10"/>
<text x="183.0" y="1744.6" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">2</text>
<line x1="230.2" y1="1268.5" x2="270.2" y2="1268.5" stroke="#666" stroke-width="10"/>
<text x="183.0" y="1305.3" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">4</text>
<line x1="230.2" y1="829.2" x2="270.2" y2="829.2" stroke="#666" stroke-width="10"/>
<text x="183.0" y="866.0" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">6</text>
<line x1="230.2" y1="389.9" x2="270.2" y2="389.9" stroke="#666" stroke-width="10"/>
<text x="183.0" y="426.7" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">8</text>
<line x1="1865.1" y1="1268.5" x2="1915.1" y2="1148.5" stroke="rgb(94,129,181)" stroke-width="10" />
<text x="1915.1" y="1148.5" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="160" fill="rgb(94,129,181)" dominant-baseline="auto">squares</text>
</svg>
