tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__list_plot__list_plot_single_element.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"ListPlot[{5}]\")"
---
<svg width="360" height="225" viewBox="0 0 3600 2250" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="3600" height="2250" opacity="1" fill="#FFFFFF" stroke="none"/>
<circle cx="1927" cy="1049" r="30" opacity="1" fill="#5E81B5" stroke="none" stroke-width="1"/>
<line x1="356.2" y1="1997.8" x2="3500.0" y2="1997.8" stroke="#666" stroke-width="5"/>
<line x1="513.4" y1="1997.8" x2="513.4" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="670.6" y1="1997.8" x2="670.6" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="827.8" y1="1997.8" x2="827.8" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="985.0" y1="1997.8" x2="985.0" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="1299.4" y1="1997.8" x2="1299.4" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="1456.6" y1="1997.8" x2="1456.6" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="1613.8" y1="1997.8" x2="1613.8" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="1770.9" y1="1997.8" x2="1770.9" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="2085.3" y1="1997.8" x2="2085.3" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="2242.5" y1="1997.8" x2="2242.5" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="2399.7" y1="1997.8" x2="2399.7" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="2556.9" y1="1997.8" x2="2556.9" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="2871.2" y1="1997.8" x2="2871.2" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="3028.4" y1="1997.8" x2="3028.4" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="3185.6" y1="1997.8" x2="3185.6" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="3342.8" y1="1997.8" x2="3342.8" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="356.2" y1="1997.8" x2="356.2" y2="1957.8" stroke="#666" stroke-width="5"/>
<line x1="1142.2" y1="1997.8" x2="1142.2" y2="1957.8" stroke="#666" stroke-width="5"/>
<text x="1142.2" y="2118.5" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">0.5</text>
<line x1="1928.1" y1="1997.8" x2="1928.1" y2="1957.8" stroke="#666" stroke-width="5"/>
<text x="1928.1" y="2118.5" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1.0</text>
<line x1="2714.1" y1="1997.8" x2="2714.1" y2="1957.8" stroke="#666" stroke-width="5"/>
<text x="2714.1" y="2118.5" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1.5</text>
<line x1="3500.0" y1="1997.8" x2="3500.0" y2="1957.8" stroke="#666" stroke-width="5"/>
<text x="3500.0" y="2118.5" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">2.0</text>
<line x1="356.2" y1="100.0" x2="356.2" y2="1997.8" stroke="#666" stroke-width="5"/>
<line x1="356.2" y1="1902.9" x2="380.2" y2="1902.9" stroke="#666" stroke-width="5"/>
<line x1="356.2" y1="1808.0" x2="380.2" y2="1808.0" stroke="#666" stroke-width="5"/>
<line x1="356.2" y1="1713.1" x2="380.2" y2="1713.1" stroke="#666" stroke-width="5"/>
<line x1="356.2" y1="1618.2" x2="380.2" y2="1618.2" stroke="#666" stroke-width="5"/>
<line x1="356.2" y1="1428.4" x2="380.2" y2="1428.4" stroke="#666" stroke-width="5"/>
<line x1="356.2" y1="1333.5" x2="380.2" y2="1333.5" stroke="#666" stroke-width="5"/>
<line x1="356.2" y1="1238.6" x2="380.2" y2="1238.6" stroke="#666" stroke-width="5"/>
<line x1="356.2" y1="1143.8" x2="380.2" y2="1143.8" stroke="#666" stroke-width="5"/>
<line x1="356.2" y1="954.0" x2="380.2" y2="954.0" stroke="#666" stroke-width="5"/>
<line x1="356.2" y1="859.1" x2="380.2" y2="859.1" stroke="#666" stroke-width="5"/>
<line x1="356.2" y1="764.2" x2="380.2" y2="764.2" stroke="#666" stroke-width="5"/>
<line x1="356.2" y1="669.3" x2="380.2" y2="669.3" stroke="#666" stroke-width="5"/>
<line x1="356.2" y1="479.5" x2="380.2" y2="479.5" stroke="#666" stroke-width="5"/>
<line x1="356.2" y1="384.7" x2="380.2" y2="384.7" stroke="#666" stroke-width="5"/>
<line x1="356.2" y1="289.8" x2="380.2" y2="289.8" stroke="#666" stroke-width="5"/>
<line x1="356.2" y1="194.9" x2="380.2" y2="194.9" stroke="#666" stroke-width="5"/>
<line x1="356.2" y1="1997.8" x2="396.2" y2="1997.8" stroke="#666" stroke-width="5"/>
<line x1="356.2" y1="1523.3" x2="396.2" y2="1523.3" stroke="#666" stroke-width="5"/>
<text x="309.0" y="1560.1" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">4.5</text>
<line x1="356.2" y1="1048.9" x2="396.2" y2="1048.9" stroke="#666" stroke-width="5"/>
<text x="309.0" y="1085.6" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">5.0</text>
<line x1="356.2" y1="574.4" x2="396.2" y2="574.4" stroke="#666" stroke-width="5"/>
<text x="309.0" y="611.2" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">5.5</text>
<line x1="356.2" y1="100.0" x2="396.2" y2="100.0" stroke="#666" stroke-width="5"/>
<text x="309.0" y="136.8" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">6.0</text>
</svg>
