tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__list_plot__list_polar_plot.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"ListPolarPlot[{1, 2, 3, 2, 1}]\")"
---
<svg width="360" height="225" viewBox="0 0 3600 2250" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="3600" height="2250" opacity="1" fill="#FFFFFF" stroke="none"/>
<polyline fill="none" opacity="1" stroke="#5E81B5" stroke-width="15" points="3373,1349 3022,176 225,262 968,2074 2738,1935 "/>
<line x1="100.0" y1="1349.0" x2="3500.0" y2="1349.0" stroke="#666" stroke-width="5"/>
<line x1="250.8" y1="1349.0" x2="250.8" y2="1325.0" stroke="#666" stroke-width="5"/>
<line x1="434.5" y1="1349.0" x2="434.5" y2="1325.0" stroke="#666" stroke-width="5"/>
<line x1="801.9" y1="1349.0" x2="801.9" y2="1325.0" stroke="#666" stroke-width="5"/>
<line x1="985.7" y1="1349.0" x2="985.7" y2="1325.0" stroke="#666" stroke-width="5"/>
<line x1="1169.4" y1="1349.0" x2="1169.4" y2="1325.0" stroke="#666" stroke-width="5"/>
<line x1="1353.1" y1="1349.0" x2="1353.1" y2="1325.0" stroke="#666" stroke-width="5"/>
<line x1="1720.6" y1="1349.0" x2="1720.6" y2="1325.0" stroke="#666" stroke-width="5"/>
<line x1="1904.3" y1="1349.0" x2="1904.3" y2="1325.0" stroke="#666" stroke-width="5"/>
<line x1="2088.0" y1="1349.0" x2="2088.0" y2="1325.0" stroke="#666" stroke-width="5"/>
<line x1="2271.7" y1="1349.0" x2="2271.7" y2="1325.0" stroke="#666" stroke-width="5"/>
<line x1="2639.2" y1="1349.0" x2="2639.2" y2="1325.0" stroke="#666" stroke-width="5"/>
<line x1="2822.9" y1="1349.0" x2="2822.9" y2="1325.0" stroke="#666" stroke-width="5"/>
<line x1="3006.6" y1="1349.0" x2="3006.6" y2="1325.0" stroke="#666" stroke-width="5"/>
<line x1="3190.4" y1="1349.0" x2="3190.4" y2="1325.0" stroke="#666" stroke-width="5"/>
<line x1="618.2" y1="1349.0" x2="618.2" y2="1309.0" stroke="#666" stroke-width="5"/>
<text x="618.2" y="1469.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">-2</text>
<line x1="1536.8" y1="1349.0" x2="1536.8" y2="1309.0" stroke="#666" stroke-width="5"/>
<text x="1536.8" y="1469.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">-1</text>
<line x1="2455.5" y1="1349.0" x2="2455.5" y2="1309.0" stroke="#666" stroke-width="5"/>
<line x1="3374.1" y1="1349.0" x2="3374.1" y2="1309.0" stroke="#666" stroke-width="5"/>
<text x="3374.1" y="1469.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1</text>
<line x1="2455.5" y1="100.0" x2="2455.5" y2="2150.0" stroke="#666" stroke-width="5"/>
<line x1="2455.5" y1="2089.1" x2="2479.5" y2="2089.1" stroke="#666" stroke-width="5"/>
<line x1="2455.5" y1="1842.4" x2="2479.5" y2="1842.4" stroke="#666" stroke-width="5"/>
<line x1="2455.5" y1="1719.1" x2="2479.5" y2="1719.1" stroke="#666" stroke-width="5"/>
<line x1="2455.5" y1="1595.7" x2="2479.5" y2="1595.7" stroke="#666" stroke-width="5"/>
<line x1="2455.5" y1="1472.4" x2="2479.5" y2="1472.4" stroke="#666" stroke-width="5"/>
<line x1="2455.5" y1="1225.7" x2="2479.5" y2="1225.7" stroke="#666" stroke-width="5"/>
<line x1="2455.5" y1="1102.3" x2="2479.5" y2="1102.3" stroke="#666" stroke-width="5"/>
<line x1="2455.5" y1="979.0" x2="2479.5" y2="979.0" stroke="#666" stroke-width="5"/>
<line x1="2455.5" y1="855.6" x2="2479.5" y2="855.6" stroke="#666" stroke-width="5"/>
<line x1="2455.5" y1="609.0" x2="2479.5" y2="609.0" stroke="#666" stroke-width="5"/>
<line x1="2455.5" y1="485.6" x2="2479.5" y2="485.6" stroke="#666" stroke-width="5"/>
<line x1="2455.5" y1="362.3" x2="2479.5" y2="362.3" stroke="#666" stroke-width="5"/>
<line x1="2455.5" y1="238.9" x2="2479.5" y2="238.9" stroke="#666" stroke-width="5"/>
<line x1="2455.5" y1="1965.8" x2="2495.5" y2="1965.8" stroke="#666" stroke-width="5"/>
<text x="2408.2" y="2002.5" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">-1</text>
<line x1="2455.5" y1="1349.0" x2="2495.5" y2="1349.0" stroke="#666" stroke-width="5"/>
<line x1="2455.5" y1="732.3" x2="2495.5" y2="732.3" stroke="#666" stroke-width="5"/>
<text x="2408.2" y="769.1" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1</text>
<line x1="2455.5" y1="115.6" x2="2495.5" y2="115.6" stroke="#666" stroke-width="5"/>
<text x="2408.2" y="152.3" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">2</text>
</svg>
