tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__list_plot__list_step_plot.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"ListStepPlot[{1, 3, 2, 4}]\")"
---
<svg width="360" height="225" viewBox="0 0 3600 2250" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="3600" height="2250" opacity="1" fill="#FFFFFF" stroke="none"/>
<polyline fill="none" opacity="1" stroke="#5E81B5" stroke-width="15" points="351,1927 1360,1927 1360,756 2368,756 2368,1342 3377,1342 3377,171 "/>
<line x1="230.0" y1="1998.0" x2="3500.0" y2="1998.0" stroke="#666" stroke-width="5"/>
<line x1="553.0" y1="1998.0" x2="553.0" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="754.8" y1="1998.0" x2="754.8" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="956.7" y1="1998.0" x2="956.7" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="1158.5" y1="1998.0" x2="1158.5" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="1562.2" y1="1998.0" x2="1562.2" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="1764.1" y1="1998.0" x2="1764.1" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="1965.9" y1="1998.0" x2="1965.9" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="2167.8" y1="1998.0" x2="2167.8" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="2571.5" y1="1998.0" x2="2571.5" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="2773.3" y1="1998.0" x2="2773.3" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="2975.2" y1="1998.0" x2="2975.2" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="3177.0" y1="1998.0" x2="3177.0" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="351.1" y1="1998.0" x2="351.1" y2="1958.0" stroke="#666" stroke-width="5"/>
<text x="351.1" y="2118.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1</text>
<line x1="1360.4" y1="1998.0" x2="1360.4" y2="1958.0" stroke="#666" stroke-width="5"/>
<text x="1360.4" y="2118.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">2</text>
<line x1="2369.6" y1="1998.0" x2="2369.6" y2="1958.0" stroke="#666" stroke-width="5"/>
<text x="2369.6" y="2118.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">3</text>
<line x1="3378.9" y1="1998.0" x2="3378.9" y2="1958.0" stroke="#666" stroke-width="5"/>
<text x="3378.9" y="2118.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">4</text>
<line x1="230.0" y1="100.0" x2="230.0" y2="1998.0" stroke="#666" stroke-width="5"/>
<line x1="230.0" y1="1810.5" x2="254.0" y2="1810.5" stroke="#666" stroke-width="5"/>
<line x1="230.0" y1="1693.4" x2="254.0" y2="1693.4" stroke="#666" stroke-width="5"/>
<line x1="230.0" y1="1576.2" x2="254.0" y2="1576.2" stroke="#666" stroke-width="5"/>
<line x1="230.0" y1="1459.1" x2="254.0" y2="1459.1" stroke="#666" stroke-width="5"/>
<line x1="230.0" y1="1224.7" x2="254.0" y2="1224.7" stroke="#666" stroke-width="5"/>
<line x1="230.0" y1="1107.6" x2="254.0" y2="1107.6" stroke="#666" stroke-width="5"/>
<line x1="230.0" y1="990.4" x2="254.0" y2="990.4" stroke="#666" stroke-width="5"/>
<line x1="230.0" y1="873.3" x2="254.0" y2="873.3" stroke="#666" stroke-width="5"/>
<line x1="230.0" y1="638.9" x2="254.0" y2="638.9" stroke="#666" stroke-width="5"/>
<line x1="230.0" y1="521.8" x2="254.0" y2="521.8" stroke="#666" stroke-width="5"/>
<line x1="230.0" y1="404.6" x2="254.0" y2="404.6" stroke="#666" stroke-width="5"/>
<line x1="230.0" y1="287.5" x2="254.0" y2="287.5" stroke="#666" stroke-width="5"/>
<line x1="230.0" y1="1927.7" x2="270.0" y2="1927.7" stroke="#666" stroke-width="5"/>
<text x="182.8" y="1964.5" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1</text>
<line x1="230.0" y1="1341.9" x2="270.0" y2="1341.9" stroke="#666" stroke-width="5"/>
<text x="182.8" y="1378.7" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">2</text>
<line x1="230.0" y1="756.1" x2="270.0" y2="756.1" stroke="#666" stroke-width="5"/>
<text x="182.8" y="792.8" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">3</text>
<line x1="230.0" y1="170.3" x2="270.0" y2="170.3" stroke="#666" stroke-width="5"/>
<text x="182.8" y="207.0" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">4</text>
</svg>
